--- a/css/style.css
+++ b/css/style.css
@@ -711,6 +711,8 @@ iframe {
   flex-direction: row;
   align-items: center;
   justify-content: center;
+  flex-wrap: wrap;
+  margin: 0 10px;
 }
 
 .footer img {
@@ -2381,11 +2383,17 @@ p.testimonials-text {
   }
 }
 
+@media handheld, only screen and (max-width: 1440px) {
+  .form-container {
+    margin: 0 5% !important;
+  }
+}
+
 @media handheld, only screen and (max-width: 1280px) {
   .home-wrapper {
-    background: url(../images/HERO-1200x.png);
     background-size: cover;
     background-repeat: no-repeat;
+    height: 70vh;
   }
 
   .hero-content {
@@ -2415,6 +2423,18 @@ p.testimonials-text {
   .course-card-content {
     margin: 10px 10px;
   }
+
+  .form-container {
+    margin: 0 !important;
+  }
+
+  .form-container h3 {
+    font-size: 24px;
+  }
+
+  .classes-card-subtext {
+    width: 90% !important;
+  }
 }
 
 @media handheld, only screen and (max-width: 1040px) {
@@ -2425,9 +2445,9 @@ p.testimonials-text {
   }
 
   .home-wrapper {
-    background: url(../images/HERO-1040x.png);
     background-size: cover;
     padding: 50px 0 20px 0;
+    height: 60vh;
   }
 
   .logo-lp {
@@ -2442,21 +2462,35 @@ p.testimonials-text {
   .btn-super-orange h3 {
     font-size: 20px;
   }
+
+  .form-container {
+    flex-wrap: wrap-reverse;
+    justify-content: center !important;
+  }
+
+  .form-aside-text {
+    margin-top: 50px;
+  }
+
+  .aside-text-content {
+    margin-bottom: 20px !important;
+    text-align: center;
+  }
 }
 
-@media handheld, only screen and (max-width: 800px) {
+@media handheld, only screen and (max-width: 820px) {
   h1 {
     font-size: 30px !important;
   }
 
   .home-wrapper {
     padding: 50px 0 40px 0;
-    background: url(../images/HERO-mobile.png);
+    background: url(../images/HOME-mobile.jpg);
     background-size: cover;
   }
 
   .home-wrapper .gradient_overlay {
-    opacity: 0.3;
+    opacity: 0.6;
     background: #000;
   }
 
@@ -2541,7 +2575,7 @@ p.testimonials-text {
   }
 
   .course-card-content {
-    padding: 50px 0px;
+    padding: 10px 0 0 0;
   }
 
   h2.section-title {
@@ -2615,9 +2649,10 @@ p.testimonials-text {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  margin: 0 280px;
+  margin: 0 10%;
   padding: 0 20px;
   align-items: end;
+  /* flex-wrap: wrap-reverse; */
 }
 
 .form-container h3 {
@@ -2628,6 +2663,7 @@ p.testimonials-text {
   background-color: #42d1ce;
   padding: 40px 25px;
   border-radius: 20px;
+  margin: 0 20px;
 }
 
 .form-title h3 {
@@ -2744,3 +2780,6 @@ p.testimonials-text {
 .transfer-badge p {
   font-size: 22px;
 }
+
+@media handheld, only screen and (max-width: 769px) {
+} ;
