--- a/css/style.css
+++ b/css/style.css
@@ -297,11 +297,10 @@ iframe {
 }
 
 .section-dark-blue-gradient {
-  background: rgb(81, 33, 153);
   background: linear-gradient(
     120deg,
-    rgba(81, 33, 153, 1) 0%,
-    rgba(29, 13, 54, 1) 100%
+    rgba(35, 55, 117, 1) 0%,
+    rgba(0, 7, 31, 1) 100%
   );
   padding: 60px 0;
 }
@@ -314,6 +313,7 @@ iframe {
 .section-faq {
   background: url(/images/bg-perguntas.png);
   padding: 120px 0;
+  background-size: cover;
 }
 
 .section-grey {
@@ -372,6 +372,10 @@ iframe {
 }
 
 /* margin and padding classes */
+
+.margin-left-100 {
+  margin-left: 100px;
+}
 
 .margin-left-200 {
   margin-left: 200px;
@@ -1953,7 +1957,6 @@ btn:hover {
   background-color: #42d1ce;
   font-style: normal;
   position: relative;
-  display: inline-block;
   text-align: center;
   color: #fff !important;
   font-size: 12px;
@@ -1961,13 +1964,13 @@ btn:hover {
   letter-spacing: 1px;
   padding: 20px 40px;
   border-radius: 15px !important;
-  max-width: 375px;
+  max-width: 250px;
   min-height: 65px;
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
   align-items: center;
-  margin-top: 20px;
+  margin: 20px auto 20px auto;
 }
 
 .btn-blue-fluid:hover {
@@ -2095,7 +2098,7 @@ btn:hover {
   background: #42d1ce;
   display: block;
   margin: 0 auto;
-  margin-top: 35px;
+  margin-top: 14px;
   margin-bottom: 14px;
 }
 
@@ -2163,6 +2166,10 @@ btn:hover {
   flex-direction: row;
   justify-content: center;
   align-items: center;
+}
+
+h1.aside-text-content {
+  font-size: 60px !important;
 }
 /* ----- FINAL - DANILO ALTERAÇÕES ----- */
 
@@ -2757,6 +2764,30 @@ p.testimonials-text {
 }
 
 @media handheld, only screen and (max-width: 820px) {
+  #contact {
+    height: 2700px !important;
+  }
+
+  .img-hor-vert {
+    -moz-transform: scale(-1, 1);
+    -o-transform: scale(-1, 1);
+    -webkit-transform: scale(-1, 1);
+    transform: scale(-1, 1);
+  }
+
+  .section-faq {
+    padding: 20px 0;
+    height: 1000px;
+  }
+
+  h1.aside-text-content {
+    font-size: 36px !important;
+  }
+
+  .circle__row {
+    bottom: 155px !important;
+  }
+
   .img-600 {
     width: 400px !important;
   }
@@ -2784,13 +2815,11 @@ p.testimonials-text {
 
   .home-wrapper {
     padding: 50px 0 40px 0;
-    background: url(../images/HERO-MOBILE.jpg);
     background-size: cover;
   }
 
   .home-wrapper .gradient_overlay {
-    opacity: 0.6;
-    background: #000;
+    opacity: 0.2;
   }
 
   .hero-content {
@@ -2866,6 +2895,7 @@ p.testimonials-text {
 
   .img-mb-30 {
     margin-bottom: 30px;
+    margin-left: 0;
   }
 
   .text-center {
@@ -3209,6 +3239,7 @@ p.testimonials-text {
 
 .text-42 p {
   font-size: 18px;
+  line-height: 28px;
 }
 
 .faq {
@@ -3267,34 +3298,10 @@ img.faq-img::selection {
   margin: 0 auto;
 }
 
-h1 {
-  font-size: 24px;
-  font-weight: 400;
-  text-align: center;
-}
-
-img {
+.card_image img {
   height: auto;
   max-width: 100%;
   vertical-align: middle;
-}
-
-.btn {
-  color: #ffffff;
-  padding: 0.8rem;
-  font-size: 14px;
-  text-transform: uppercase;
-  border-radius: 4px;
-  font-weight: 400;
-  display: block;
-  width: 100%;
-  cursor: pointer;
-  border: 1px solid rgba(255, 255, 255, 0.2);
-  background: transparent;
-}
-
-.btn:hover {
-  background-color: rgba(255, 255, 255, 0.12);
 }
 
 .cards {
@@ -3324,7 +3331,7 @@ img {
 
 .card {
   background-color: white;
-  border-radius: 0.25rem;
+  border-radius: 10px;
   box-shadow: 0 20px 40px -14px rgba(0, 0, 0, 0.25);
   display: flex;
   flex-direction: column;
@@ -3333,28 +3340,34 @@ img {
 
 .card_content {
   padding: 1rem;
-  background: linear-gradient(to bottom left, #ef8d9c 40%, #ffc39e 100%);
+  background-color: #fff;
 }
 
 .card_title {
-  color: #ffffff;
-  font-size: 1.1rem;
-  font-weight: 700;
+  font-size: 24px;
   letter-spacing: 1px;
-  text-transform: capitalize;
-  margin: 0px;
+  text-transform: uppercase;
+  margin: 14px 0px 0px 0px;
+  text-align: center;
 }
 
 .card_text {
-  color: #ffffff;
-  font-size: 0.875rem;
+  font-size: 16px;
   line-height: 1.5;
-  margin-bottom: 1.25rem;
+  margin: 30px;
   font-weight: 400;
+  color: #3e3e3e;
+  text-align: center;
 }
 .made_by {
   font-weight: 400;
   font-size: 13px;
   margin-top: 35px;
   text-align: center;
+}
+
+.align-end {
+  height: 100%;
+  display: flex;
+  align-items: end;
 }
